--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -4,8 +4,7 @@ body {
 
 .para,
 .small-para {
-  color: hsl(0, 0%, 0%);
-  font-weight: 800;
+  font-size: 22px;
 }
 
 .small-para {
@@ -14,28 +13,30 @@ body {
 }
 
 .para {
-  font-size: 22px;
+  color: hsl(0, 0%, 0%);
+  font-weight: 800;
 }
 
-.confirm {
+ #confirm-button {
   background: green;
   color: white;
   font-weight: bold;
 } 
 
-.button {
+.button,
+.confirm{
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
 }
 
-.child {
+.text .child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
 }
 
-div.text {
+.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
